--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/native-stack": "^6.6.1",
     "expo": "~44.0.0",
     "expo-blur": "~11.0.0",
+    "expo-linear-gradient": "~11.0.3",
     "expo-status-bar": "~1.2.0",
     "native-base": "^3.3.10",
     "react": "17.0.1",
