--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@expo-google-fonts/asap": "^0.2.2",
     "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.1",
+    "@react-navigation/stack": "^6.2.1",
     "expo": "~44.0.0",
+    "expo-app-loading": "~1.3.0",
     "expo-blur": "~11.0.0",
+    "expo-font": "~10.0.4",
     "expo-linear-gradient": "~11.0.3",
     "expo-status-bar": "~1.2.0",
     "native-base": "^3.3.10",
@@ -36,5 +40,9 @@
   "devDependencies": {
     "@babel/core": "^7.12.9"
   },
-  "private": true
+  "private": true,
+  "resolutions": {
+    "d2/left-pad": "1.1.1",
+    "c/**/left-pad": "^1.1.2"
+  }
 }
