--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "expo-font": "~10.0.4",
     "expo-linear-gradient": "~11.0.3",
     "expo-status-bar": "~1.2.0",
+    "expo-updates": "~0.11.6",
     "native-base": "^3.3.10",
     "react": "17.0.1",
     "react-dom": "17.0.1",
