--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "dependencies": {
     "@expo-google-fonts/asap": "^0.2.2",
     "@ptomasroos/react-native-multi-slider": "^2.2.2",
+    "@react-native-async-storage/async-storage": "^1.17.5",
     "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.1",
     "@react-navigation/stack": "^6.2.1",
+    "@reduxjs/toolkit": "^1.8.1",
     "expo": "~44.0.0",
     "expo-app-loading": "~1.3.0",
     "expo-blur": "~11.0.0",
@@ -23,6 +25,7 @@
     "expo-linear-gradient": "~11.0.3",
     "expo-status-bar": "~1.2.0",
     "expo-updates": "~0.11.6",
+    "firebase": "^9.6.11",
     "native-base": "^3.3.10",
     "react": "17.0.1",
     "react-dom": "17.0.1",
@@ -37,7 +40,10 @@
     "react-native-tab-view": "^3.1.1",
     "react-native-toggle-element": "^1.0.1",
     "react-native-vector-icons": "^9.1.0",
-    "react-native-web": "0.17.1"
+    "react-native-web": "0.17.1",
+    "react-redux": "^8.0.2",
+    "redux-persist": "^6.0.0",
+    "redux-thunk": "^2.4.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
