--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "expo-status-bar": "~1.2.0",
     "expo-updates": "~0.11.6",
     "firebase": "^9.6.11",
+    "lottie-ios": "3.2.3",
+    "lottie-react-native": "^5.1.3",
     "native-base": "^3.4.6",
     "react": "17.0.1",
     "react-dom": "17.0.1",
